--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>B&B Chaveiros</title>
    <link rel="stylesheet" href="style.css">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-   
+
+   <header>
+      <div id="menu-bar" class="fa fa-bars"></div>
+      <a href="#" class="logo">Logo</a>
+      <nav class="navbar">
+          <a href="#home">Início</a>
+          <a href="#product">Produtos</a>
+          <a href="#fearured">Sobre</a>
+          <a href="#blog">Contato</a>
+      </nav>
+  </header>
+
+
+
+   <!-- Script -->
+   <script src="script.js"></script>
+   <!-- End Script -->
 </body>
 </html>
