inicio do footer

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <!-- End Circle -->
 
       <!-- Header -->
-      <header>
-         <a href="#"><img src="assets/logo.png" alt="B&B logo" class="logo"></a>
+      <header id="home">
+         <a href="#home"><img src="assets/logo.png" alt="B&B logo" class="logo"></a>
          <div class="toggle" onclick="toggleMenu();"></div>
             <ul class="navegation">
                <li><a href="#">Início</a></li>
@@ -33,7 +33,7 @@
       <div class="content">
          <div class="textbox">
             <h1>Qualidade & Criatividade<br><span>B&B Chaveiros</span></h1>
-            <p>Fabricante de chaveiros personalizados, localizados em São Paulo estamos há mais de uma década proporcionando doces lembranças!</p>
+            <p>Fabricante de chaveiros personalizados, localizados em São Paulo estamos há mais de uma década proporcionando doces lembranças para nossos clientes!</p>
          </div>
          <div class="imgbox">
             <img src="assets/chaveiro0.png" alt="Chaveiro" class="beb">
@@ -49,11 +49,47 @@
       </ul>
       <ul class="sci">
          <li><a href="https://www.instagram.com/chaveirosbb/" target="_blank"><img src="assets/instagram.png" alt="facebook icon"></a></li>
-         <li><a href="https://api.whatsapp.com/send?phone=5511979557102"><img src="assets/whatsapp.png" alt="facebook icon"></a></li>
-         <li><a href="#"><img src="assets/email.png" alt="facebook icon"></a></li>
+         <li><a href="https://api.whatsapp.com/send?phone=5511979557102" target="_blank"><img src="assets/whatsapp.png" alt="facebook icon"></a></li>
+         <li><a href="mailto:lubijux2016@gmail.com"><img src="assets/email.png" alt="facebook icon"></a></li>
       </ul>
       <!-- End Thumb-->
    </section>
+
+   <!-- Main -->
+
+   <!-- End Main-->
+
+   <!-- Footer -->
+   <footer id="footer">
+      <div class="container">
+         <div class="row">
+            <div class="footer-col">
+               <h4>B&B Chaveiros</h4>
+               <p>Fabricante de chaveiros personalizados, localizados em São Paulo estamos há mais de uma década proporcionando doces lembranças para nossos clientes!</p>
+               <ul>
+                  <li><a href="#"></a></li>
+               </ul>
+            </div>
+            <div class="footer-col">
+               <h4>Link</h4>
+               <ul>
+                  <li><a href="#">Início</a></li>
+                  <li><a href="#">Produtos</a></li>
+                  <li><a href="#">Sobre nós</a></li>
+               </ul>
+            </div>
+            <div class="footer-col">
+               <h4>Contacte nos</h4>
+               <div class="social-links">
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                  <a href="#"><i class="fa-regular fa-envelope"></i></a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+   <!-- End Footer -->
 
    <!-- Script -->
    <script src="script.js"></script>
