--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <!-- Header -->
       <header id="home">
          <a href="#home"><img src="assets/logo.png" alt="B&B logo" class="logo"></a>
-         <div class="toggle" onclick="toggleMenu();"></div>
+            <div class="toggle" onclick="toggleMenu();"></div>
             <ul class="navegation">
-               <li><a href="#">Início</a></li>
-               <li><a href="#">Produtos</a></li>
-               <li><a href="#">Sobre nós</a></li>
-               <li><a href="#">Contato</a></li>
+               <li><a href="#home" class="link">Início</a></li>
+               <li><a href="#" class="link">Produtos</a></li>
+               <li><a href="#" class="link">Sobre nós</a></li>
+               <li><a href="#" class="link">Contato</a></li>
             </ul>
       </header>
       <!-- End Header -->
@@ -65,17 +65,27 @@
          <div class="row">
             <div class="footer-col">
                <h4>B&B Chaveiros</h4>
-               <p>Fabricante de chaveiros personalizados, localizados em São Paulo estamos há mais de uma década proporcionando doces lembranças para nossos clientes!</p>
+               <p>Fabricante de chaveiros personalizados localizados em São Paulo</p>
                <ul>
                   <li><a href="#"></a></li>
                </ul>
             </div>
             <div class="footer-col">
-               <h4>Link</h4>
+               <h4>Seções</h4>
                <ul>
                   <li><a href="#">Início</a></li>
                   <li><a href="#">Produtos</a></li>
                   <li><a href="#">Sobre nós</a></li>
+               </ul>
+            </div>
+            <div class="footer-col">
+               <h4>Mostruário</h4>
+               <ul>
+                  <li><a href="#">Abridores</a></li>
+                  <li><a href="#">Emborrachados</a></li>
+                  <li><a href="#">Porta Chaves</a></li>
+                  <li><a href="#">Letras</a></li>
+                  <li><a href="#">Super Heróis</a></li>
                </ul>
             </div>
             <div class="footer-col">
