--- a/index.html
+++ b/index.html
@@ -59,6 +59,47 @@
 
    <!-- End Main-->
 
+   <!-- About us -->
+
+   <!-- End About us -->
+
+   <!-- Contact -->
+   <section id="contact">
+      <div class="contact container-c">
+         <div>
+            <h1 class="section-title">Meios de <span>Contato</span></h1>
+         </div>
+         <div class="contact-items">
+            
+            <div class="contact-item">
+               <div class="icon"><img src="assets/whatsapp.png" alt="whatsapp icon"></div>
+               <div class="contact-info">
+                  <h1>Whatsapp</h1>
+                  <h2><a href="https://api.whatsapp.com/send?phone=5511979557102">+55 (11) 97955-7102</a></h2>
+               </div>
+            </div>
+
+            <div class="contact-item">
+               <div class="icon"><img src="assets/email.png" alt="email icon"></div>
+               <div class="contact-info">
+                  <h1>Whatsapp</h1>
+                  <h2><a href="mailto:lubijux2016@gmail.com">lubijux2016@gmail.com</a></h2>
+               </div>
+            </div>
+
+            <div class="contact-item">
+               <div class="icon"><img src="assets/instagram.png" alt="instagram icon"></div>
+               <div class="contact-info">
+                  <h1>Whatsapp</h1>
+                  <h2><a href="https://www.instagram.com/chaveirosbb/">@chaveirosbb</a></h2>
+               </div>
+            </div>
+
+         </div>
+      </div>
+   </section>
+   <!-- End Contact -->
+
    <!-- Footer -->
    <footer id="footer">
       <div class="container">
@@ -76,6 +117,7 @@
                   <li><a href="#">Início</a></li>
                   <li><a href="#">Produtos</a></li>
                   <li><a href="#">Sobre nós</a></li>
+                  <li><a href="#">Contato</a></li>
                </ul>
             </div>
             <div class="footer-col">
