Ajustes dos contatos

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="contact-item">
                <div class="icon"><img src="assets/email.png" alt="email icon"></div>
                <div class="contact-info">
-                  <h1>Whatsapp</h1>
+                  <h1>Email</h1>
                   <h2><a href="mailto:lubijux2016@gmail.com">lubijux2016@gmail.com</a></h2>
                </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="contact-item">
                <div class="icon"><img src="assets/instagram.png" alt="instagram icon"></div>
                <div class="contact-info">
-                  <h1>Whatsapp</h1>
+                  <h1>Instagram</h1>
                   <h2><a href="https://www.instagram.com/chaveirosbb/">@chaveirosbb</a></h2>
                </div>
             </div>
