correção de bug do menu

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <!-- Header -->
       <header id="home">
          <a href="#home"><img src="assets/logo.png" alt="B&B logo" class="logo"></a>
-            <div id="btn" class="toggle" onclick="toggleMenu();"></div>
+            <div class="toggle" onclick="toggleMenu();"></div>
             <ul class="navegation">
-               <li><a href="#home" class="link" id="btn">Início</a></li>
-               <li><a href="#" class="link" id="btn">Produtos</a></li>
-               <li><a href="#" class="link" id="btn">Sobre nós</a></li>
-               <li><a href="#" class="link" id="btn">Contato</a></li>
+               <li><a href="#home" class="link">Início</a></li>
+               <li><a href="#" class="link">Produtos</a></li>
+               <li><a href="#" class="link">Sobre nós</a></li>
+               <li><a href="#" class="link">Contato</a></li>
             </ul>
       </header>
       <!-- End Header -->
