criação da section about

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul class="navegation">
                <li><a href="#home" class="link">Início</a></li>
                <li><a href="#" class="link">Produtos</a></li>
-               <li><a href="#" class="link">Sobre nós</a></li>
-               <li><a href="#" class="link">Contato</a></li>
+               <li><a href="#book-a" class="link">Sobre nós</a></li>
+               <li><a href="#book-c" class="link">Contato</a></li>
             </ul>
       </header>
       <!-- End Header -->
@@ -48,7 +48,7 @@
          <li><img src="assets/chaveiro0.png" alt="coffee" onclick="imgSlider('assets/chaveiro0.png');changeCircleColor('#d752b1')"></li>
       </ul>
       <ul class="sci">
-         <li><a href="https://www.instagram.com/chaveirosbb/" target="_blank"><img src="assets/instagram.png" alt="facebook icon"></a></li>
+         <li><a href="https://www.instagram.com/chaveirosbb" target="_blank"><img src="assets/instagram.png" alt="facebook icon"></a></li>
          <li><a href="https://api.whatsapp.com/send?phone=5511979557102" target="_blank"><img src="assets/whatsapp.png" alt="facebook icon"></a></li>
          <li><a href="mailto:lubijux2016@gmail.com"><img src="assets/email.png" alt="facebook icon"></a></li>
       </ul>
@@ -60,12 +60,25 @@
    <!-- End Main-->
 
    <!-- About us -->
-
+   <section id="about">
+      <div class="about container-c" id="book-a">
+         <div class="col-left">
+            <div class="about-img">
+               <img src="assets/casalbb.jpg" alt="Casal B&B">
+            </div>
+         </div>
+         <div class="col-right">
+            <h1 class="section-title">Sobre <span>nós</span></h1>
+            <h2>Casal B&B</h2>
+            <p>Só nós sabemos o quanto foi difícil chegar até aqui. Foram muitos dias de luta e trabalho intenso, quantas vezes saíamos para fazer entregas e dormíamos no carro, pois não tinhamos condições de pagar uma simples pousada. Quantos "NÃO" encontramos no caminho e tantas outras dificuldades que passamos. Hoje nosso sentimento é de gratidão a DEUS primeiramente, aos nossos clientes e parceiros. A luta continua!! Seguimos firmes,fortes e juntos. Sempre em busca dos nossos sonhos e objetivos. E principalmente com a benção de Deus sobre nossas vidas. 🙏</p>
+         </div>
+      </div>
+   </section>
    <!-- End About us -->
 
    <!-- Contact -->
    <section id="contact">
-      <div class="contact container-c">
+      <div class="contact container-c" id="book-c">
          <div>
             <h1 class="section-title">Meios de <span>Contato</span></h1>
          </div>
@@ -91,7 +104,7 @@
                <div class="icon"><img src="assets/instagram.png" alt="instagram icon"></div>
                <div class="contact-info">
                   <h1>Instagram</h1>
-                  <h2><a href="https://www.instagram.com/chaveirosbb/">@chaveirosbb</a></h2>
+                  <h2><a href="https://www.instagram.com/chaveirosbb">@chaveirosbb</a></h2>
                </div>
             </div>
 
@@ -114,10 +127,10 @@
             <div class="footer-col">
                <h4>Seções</h4>
                <ul>
-                  <li><a href="#">Início</a></li>
+                  <li><a href="#home">Início</a></li>
                   <li><a href="#">Produtos</a></li>
-                  <li><a href="#">Sobre nós</a></li>
-                  <li><a href="#">Contato</a></li>
+                  <li><a href="#book-a">Sobre nós</a></li>
+                  <li><a href="#book-c">Contato</a></li>
                </ul>
             </div>
             <div class="footer-col">
@@ -133,9 +146,9 @@
             <div class="footer-col">
                <h4>Contacte nos</h4>
                <div class="social-links">
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                  <a href="#"><i class="fa-regular fa-envelope"></i></a>
+                  <a href="https://www.instagram.com/chaveirosbb" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="https://api.whatsapp.com/send?phone=5511979557102"><i class="fa-brands fa-whatsapp"></i></a>
+                  <a href="mailto:lubijux2016@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                </div>
             </div>
          </div>
