correção do dropdown menu

--- a/index.html
+++ b/index.html
@@ -554,11 +554,11 @@
             <div class="object">
                <div class="box">
                   <img src="assets/chaveiro0.png" alt="Chaveiro">
-                  <h4>Código: 001</h4>
+                  <h4>Cód: 001</h4>
                </div>
                <div class="box">
                   <img src="assets/chaveiro0.png" alt="Chaveiro">
-                  <h4>Código: 001</h4>
+                  <h4>Cód: 001</h4>
                </div>
                <div class="box">
                   <img src="assets/chaveiro0.png" alt="Chaveiro">
